# lib/db/src/schema/settings.ts
@@ -4,6 +4,10 @@ export const settingsTable = pgTable("settings", {
   id: serial("id").primaryKey(),
   publicApiToken: text("public_api_token"),
   publicAccountId: text("public_account_id"),
+  robinhoodBearerToken: text("robinhood_bearer_token"),
+  webullAppKey: text("webull_app_key"),
+  webullAppSecret: text("webull_app_secret"),
+  webullAccountId: text("webull_account_id"),
   orderType: text("order_type").notNull().default("MARKET"),
   instrumentType: text("instrument_type").notNull().default("EQUITY"),
   defaultQuantity: text("default_quantity").notNull().default("1"),
